--- a/signin.html
+++ b/signin.html
@@ -114,7 +114,7 @@
                   <a class="fz14 ff-heading" href="#">Lost your password?</a>
                 </div>
                 <div class="d-grid mb20">
-                  <button class="ud-btn btn-thm" onclick="register()" type="submit" herf="profile_main.html">Log In <i class="fal fa-arrow-right-long"></i></button>
+                  <button class="ud-btn btn-thm"  type="submit" herf="profile_main.html">Log In <i class="fal fa-arrow-right-long"></i></button>
                 </div>
               <!-- 
                 <div class="hr_content mb20"><hr><span class="hr_top_text">OR</span></div>
@@ -260,7 +260,9 @@
     <a class="scrollToHome" href="#"><i class="fas fa-angle-up"></i></a>
   </div>
 </div>
-<!-- Wrapper End --> 
+
+  
+<!-- Wrapper End 
 <script src="js/jquery-3.6.4.min.js"></script>
 <script src="js/jquery-migrate-3.0.0.min.js"></script>
 <script src="js/popper.min.js"></script>
@@ -319,5 +321,7 @@
   registration_form.addEventListener('submit', SignInUser);
   
 </script>
+
+  -->
 </body>
 </html>
